cmss/main/default/objects/AssetAccountRelation__c/AssetAccountRelation__c.object-meta.xml
<CustomObject>
    <label>Asset Account Relation</label>
    <nameField>
        <label>Asset Account Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Account Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>