cmss/main/default/objects/AssetAccountRelation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Reference na klienta/prospekta</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Account Relations</relationshipLabel>
    <relationshipName>AssetAccountRelations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>