cmss/main/default/objects/AssetAccountRelation__c/fields/AssetsProductType__c.field-meta.xml
<CustomField>
    <fullName>AssetsProductType__c</fullName>
    <label>Assets Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductType</valueSetName>
    </valueSet>
</CustomField>