cmss/main/default/objects/AssetAccountRelation__c/fields/DateUpdated__c.field-meta.xml
<CustomField>
    <fullName>DateUpdated__c</fullName>
    <description>Datum aktualizace</description>
    <label>Date Updated</label>
    <type>Date</type>
</CustomField>