cmss/main/default/objects/AssetAccountRelation__c/fields/ObjectID__c.field-meta.xml
<CustomField>
    <fullName>ObjectID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object ID</label>
    <referenceTo>NonLifeInsuranceObject__c</referenceTo>
    <relationshipLabel>Asset Account Relations</relationshipLabel>
    <relationshipName>AssetAccountRelations</relationshipName>
    <type>Lookup</type>
</CustomField>