cmss/main/default/objects/AssetAccountRelation__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority value is used in Assets related list to show correct relations order. See CRM-29, CRM-208</description>
    <formula>CASE( RelationType__c ,
        &quot;1&quot;, 1,
        &quot;2&quot;, 2,
        &quot;3&quot;, 3,
        &quot;4&quot;, 4,
        &quot;5&quot;, 5,
        &quot;6&quot;, 6,
        &quot;7&quot;, 7,
        &quot;8&quot;, 8,
        &quot;9&quot;, 9,
        &quot;10&quot;, 10,
        &quot;101&quot;, 1,
        &quot;102&quot;, 2,
        &quot;103&quot;, 3,
        &quot;104&quot;, 4,
        &quot;105&quot;, 5,
        &quot;106&quot;, 6,
        &quot;107&quot;, 7,
        &quot;108&quot;, 8,
        &quot;109&quot;, 9,
        &quot;201&quot;, 1,
        &quot;202&quot;, 2,
        &quot;203&quot;, 3,
        &quot;204&quot;, 4,
        &quot;205&quot;, 5,
        &quot;206&quot;, 6,
        &quot;207&quot;, 7,
        &quot;208&quot;, 8,
        &quot;209&quot;, 9,
        &quot;210&quot;, 10,
        &quot;211&quot;, 11,
        &quot;301&quot;, 1,
        &quot;303&quot;, 2,
        &quot;304&quot;, 3,
        &quot;401&quot;, 1,
        &quot;402&quot;, 2,
        &quot;403&quot;, 3,
        &quot;404&quot;, 4,
        &quot;405&quot;, 5,
        &quot;406&quot;, 6,
        &quot;407&quot;, 7,
        &quot;408&quot;, 8,
        &quot;409&quot;, 9,
        &quot;410&quot;, 10,
        &quot;411&quot;, 11,
        &quot;412&quot;, 12,
        999)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>