cmss/main/default/objects/AssetAccountRelation__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>ID produktu (SS/U/MU/CS)
Číslo smlouvy</description>
    <label>Product Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>