cmss/main/default/objects/AssetAccountRelation__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Is filled by AssetAccountRelationTriggerHandler from related Asset__r.ProductType</description>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>