cmss/main/default/objects/AssetAccountRelation__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>Platnost vazby do</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>