cmss/main/default/objects/AssetAccountRelation__c/fields/YearInsurance__c.field-meta.xml
<CustomField>
    <fullName>YearInsurance__c</fullName>
    <label>Premium</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>